# rasa-paraphrase

./: .gitignore  README.md  app.py  pyproject.toml  setup.cfg
core/: md_parser.py  metrics.py  paraphraser.py  util.py
examples/: nlu_commented.md  nlu_leading_breaks.md  nlu_no_entities.md  nlu_readme_example.md  nlu_retreival_intents.md
tests/: test_md_parser.py  test_metrics.py  test_util.py
ui/: Brython-3.8.8.tar.bz2
