[tool.poetry]
name = "rasa-paraphrase"
version = "0.1.0"
description = ""
authors = ["crodriguez1a <crodriguez1a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.0"
input_reader = "^1.2.2"
transformers = "^2.9.0"
boto3 = "^1.13.6"
botocore = "^1.16.6"
numpy = "^1.18.4"
invoke = "^1.4.1"
pytest = "^5.4.2"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
